tests/samples/0077/error.txt
error[P0001]: PHP opening tag `<?php` is not supported
  --> 0077/code.ara:1:1
  |
1 | <?php
  | ^^^^^

error: failed to parse "0077/code.ara" due to the above issue(s)

